--- a/MP3_Player_Software/ToDo.txt
+++ b/MP3_Player_Software/ToDo.txt
@@ -1,19 +1,3 @@
-(Procedure 1 - 7)
---David
-Write Serial Init
-done - Write delay 1ms function
-Write Serial Transmit and Receive Functions
-* Verify Serial Transmit Receive 
-- Echo program
-- Get PrintMemory to work
-- test stdio functions
-
-(Procedure 8 - 15)
---Jacob
-Write LCD Init
-Write LCD Write_Data
-Write LCD Write_Command
-Write LCD WriteLine
-
-Make everything beautiful and fix Jacob
---Andrew
+--David--
+	Write and Verify I2C_Read (Steps 2-3)
+	Write and Verify I2C_Write(Steps 4-5)
